Java25環境でのGWTコンパイル条件を反映